--- a/redflix/flexzone/static/flexzone/css/style.css
+++ b/redflix/flexzone/static/flexzone/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #c7adad;
-    color: #221616;
+    background-color: #fff3f3;
+    color: #1a0e0e;
     margin: 0;
     padding: 0;
     display: grid;
@@ -8,21 +8,53 @@ body {
     grid-template-rows: 100px calc(100vh - 50px) 50px;
     grid-template-areas: 
         "header"
-        "content"
+        "main"
         "footer"
     ;
     font-family: 'Roboto';
 }
-
 a {
     color: aqua;
     text-decoration: none;
     background-color: #fff3;
     border-bottom: 1px solid #09c;
 }
-
 header {
     grid-area: header;
-    background-color: #123;
+    height: 100px;
+    background-color: rgb(124, 16, 16);
     border-bottom: 2px solid #346;
+}
+main {
+    grid-area: main;
+}
+footer {
+    grid-area: footer;
+}
+
+.alert {
+    border: 1px solid #345;
+    border-radius: 8px;
+    padding: 4px 16px;
+    margin: 8px 0;
+}
+
+.alert-success {
+    background-color: #0f07;
+}
+
+.alert-info {
+    background-color: #06f7;
+}
+
+.alert-debug {
+    background-color: #fff7;
+}
+
+.alert-error {
+    background-color: #f007;
+}
+
+.alert-warning {
+    background-color: #fc07;
 }
