--- a/redflix/flexzone/templates/base.html
+++ b/redflix/flexzone/templates/base.html
@@ -19,10 +19,19 @@
                 <li><a href="{% url 'logout' %}">Log out</a></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Log in</a></li>
+                <li><a href="{% url 'register' %}">Sign up</a></li>
             {% endif %}
         </ul>
         </header>
-        <main>{% block content %}{% endblock content %}</main>
+        <main>
+            {% block messages %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+            {% endblock messages %}
+            {% block content %}{% endblock content %}</main>
         <footer>&copy; {% now "Y" %}</footer>
 </body>
 </html>
